API starter for pages
